--- a/info.html
+++ b/info.html
@@ -6,16 +6,16 @@
 </head>
 <body>
     <t> <b>Руководство пользователя программы ContactManager</b> </t>
-    <p>Программа ContactManager предназначена для управления базой данных контактов с помощью REST запросов в формате JSON. Программа написана на Java 8 с использованием Spring Boot (Web, JPA) и СУБД H2, база данных размещается в оперативной памяти. После запуска программы в оперативной памяти появляется БД testdb, содержащая таблицу contact. Таблица contact содержит записи вида {(id), имя, фамилия, телефон, e-mail, компания}.</p>
-    <p>Доступ к БД возможен из консоли в браузере по команде <a href="http://localhost:8080/h2-console">http://localhost:8080/h2-console</a></p>
+    <p>Программа ContactManager предназначена для управления базой данных контактов с помощью REST запросов в формате JSON. Программа написана на Java 8 с использованием Spring Boot и СУБД PostgreSQL. После запуска программы открывается БД contacts, содержащая таблицу contact. Таблица contact содержит записи вида {(id), имя, фамилия, телефон, e-mail, компания}.</p>
+    <p>Документация API в формате swagger доступна по ссылке <a href="http://localhost:8080/swagger-ui">http://localhost:8080/swagger-ui</a> , в формате JSON <a href="http://localhost:8080/api">http://localhost:8080/api</a></p>
     <p>Управление БД осуществляется в помощью следующих REST запросов в формате JSON (с примерами).</p>
     <p><b>1. Добавление нового контакта</b></p>
     <p>POST  127.0.0.1:8080/contact/add  {"firstName": "asd", "lastName": "A", "phone": "111", "email": "aa@aa.aa", "company": "ca"}</p>
     <p><b>2. Отображение всех контактов из базы</b></p>
     <p>GET  127.0.0.1:8080/contact</p>
-    <p><b>3. Отображение всех контактов из базы, с ограничением максимального кол-ва передаваемых контактов</b></p>
-    <p>GET  127.0.0.1:8080/contact/count/2</p>
-    <p>где 2 - числовой параметр, определяющий кол-во передаваемых контактов.</p>
+    <p><b>3. Отображение всех контактов из базы, с постраничным выводом ограниченного кол-ва контактов</b></p>
+    <p>GET  127.0.0.1:8080/contact?page=0&pageSize=3</p>
+    <p>где page = 0 - номер страницы, pageSize = 10 - размер страницы.</p>
     <p><b>4. Поиск всех контактов в базе, удовлетворяющий заданным критериям</b></p>
     <p>POST  127.0.0.1:8080/contact/find  {"firstName": "asd", "lastName": "A", "phone": "111", "email": "aa@aa.aa", "company": "ca"}</p>
     <p><b>5. Обновление ранее созданного контакта</b></p>
@@ -24,11 +24,11 @@
     <p>DELETE  127.0.0.1:8080/contact/delete  {"firstName": "asd", "lastName": "A", "phone": "111", "email": "aa@aa.aa", "company": "ca"}</p>
     <p><b>Примечания</b></p>
     <p>Ответы базы данных обычно имеют формат JSON. Для отправки и получения REST запросов в формате JSON удобно использовать специальные программы, например, Postman.</p>
-    <p>Возможна отправка запросов к базе в виде HTML с помощью утилиты curl (что не так удобно), тогда запросы будут иметь следующий вид:</p>
+    <p>Возможна отправка запросов к базе в виде HTML с помощью утилиты curl, тогда запросы будут иметь следующий вид:</p>
     <p>curl -X POST localhost:8080/contact/add -H 'Content-type:application/json' -d '{"firstName": "asd", "lastName": "A", "phone": "111", "email": "aa@aa.aa", "company": "ca"}'</p>
-    <p>При добавлении и изменении контакта производится его проверка на соответствие формальным требованиям:</p>
+    <p>При добавлении и изменении контакта производится его валидация на соответствие формальным требованиям:</p>
     <p>- имя и фамилия могут содержать только буквы;</p>
-    <p>- телефон может содержать только цифры;</p>
+    <p>- телефон должен быть положительным числом;</p>
     <p>- e-mail должен соответсвовать стандартам для адресов электронной почты;</p>
     <p>- компания не может быть пустой строкой.</p>
     <p>При поиске и удалении контактов из базы производится выборка/удаление всех записей, которые по значению хотя бы одного поля запроса совпадают с имеющимися в базе. Обновление ранее созданного контакта выполняется только для уже существующего в базе контакта по его id.</p>
